--- a/packages/flutter_localizations/lib/src/l10n/material_af.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_af.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "Deursoek web",
   "shareButtonLabel": "Deel",
   "clearButtonTooltip": "Vee teks uit",
-  "selectedDateLabel": "Gekies"
+  "selectedDateLabel": "Gekies",
+  "translateButtonLabel": "Translate"
 }
