--- a/packages/flutter_localizations/lib/src/l10n/material_am.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_am.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "ድርን ፈልግ",
   "shareButtonLabel": "አጋራ",
   "clearButtonTooltip": "ጽሁፍን አጽዳ",
-  "selectedDateLabel": "ተመርጧል"
+  "selectedDateLabel": "ተመርጧል",
+  "translateButtonLabel": "Translate"
 }
