--- a/packages/flutter_localizations/lib/src/l10n/material_ar.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_ar.arb
@@ -157,5 +157,6 @@
   "searchWebButtonLabel": "البحث على الويب",
   "shareButtonLabel": "مشاركة",
   "clearButtonTooltip": "محو النص",
-  "selectedDateLabel": "التاريخ المحدّد"
+  "selectedDateLabel": "التاريخ المحدّد",
+  "translateButtonLabel": "Translate"
 }
