--- a/packages/flutter_localizations/lib/src/l10n/material_az.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_az.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "Vebdə axtarın",
   "shareButtonLabel": "Paylaşın",
   "clearButtonTooltip": "Mətni silin",
-  "selectedDateLabel": "Seçilib"
+  "selectedDateLabel": "Seçilib",
+  "translateButtonLabel": "Translate"
 }
