--- a/packages/flutter_localizations/lib/src/l10n/material_be.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_be.arb
@@ -152,5 +152,6 @@
   "searchWebButtonLabel": "Пошук у сетцы",
   "shareButtonLabel": "Абагуліць",
   "clearButtonTooltip": "Выдаліць тэкст",
-  "selectedDateLabel": "Выбрана"
+  "selectedDateLabel": "Выбрана",
+  "translateButtonLabel": "Translate"
 }
