--- a/packages/flutter_localizations/lib/src/l10n/material_bn.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_bn.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "ওয়েবে সার্চ করুন",
   "shareButtonLabel": "শেয়ার করুন",
   "clearButtonTooltip": "টেক্সট মুছুন",
-  "selectedDateLabel": "বেছে নেওয়া হয়েছে"
+  "selectedDateLabel": "বেছে নেওয়া হয়েছে",
+  "translateButtonLabel": "Translate"
 }
