--- a/packages/flutter_localizations/lib/src/l10n/material_bs.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_bs.arb
@@ -149,5 +149,6 @@
   "searchWebButtonLabel": "Pretraži Web",
   "shareButtonLabel": "Dijeli",
   "clearButtonTooltip": "Brisanje teksta",
-  "selectedDateLabel": "Odabrano"
+  "selectedDateLabel": "Odabrano",
+  "translateButtonLabel": "Translate"
 }
