--- a/packages/flutter_localizations/lib/src/l10n/material_ca.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_ca.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "Cerca al web",
   "shareButtonLabel": "Comparteix",
   "clearButtonTooltip": "Esborra el text",
-  "selectedDateLabel": "Seleccionat"
+  "selectedDateLabel": "Seleccionat",
+  "translateButtonLabel": "Translate"
 }
