--- a/packages/flutter_localizations/lib/src/l10n/material_cs.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_cs.arb
@@ -152,5 +152,6 @@
   "searchWebButtonLabel": "Vyhledávat na webu",
   "shareButtonLabel": "Sdílet",
   "clearButtonTooltip": "Vymazat text",
-  "selectedDateLabel": "Vybráno"
+  "selectedDateLabel": "Vybráno",
+  "translateButtonLabel": "Translate"
 }
