--- a/packages/flutter_localizations/lib/src/l10n/material_cy.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_cy.arb
@@ -157,5 +157,6 @@
   "searchWebButtonLabel": "Chwilio'r We",
   "shareButtonLabel": "Rhannu",
   "clearButtonTooltip": "Clirio'r testun",
-  "selectedDateLabel": "Wedi'i ddewis"
+  "selectedDateLabel": "Wedi'i ddewis",
+  "translateButtonLabel": "Translate"
 }
