--- a/packages/flutter_localizations/lib/src/l10n/material_da.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_da.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "Søg på nettet",
   "shareButtonLabel": "Del",
   "clearButtonTooltip": "Ryd tekst",
-  "selectedDateLabel": "Valgt"
+  "selectedDateLabel": "Valgt",
+  "translateButtonLabel": "Translate"
 }
