--- a/packages/flutter_localizations/lib/src/l10n/material_el.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_el.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "Αναζήτηση στον ιστό",
   "shareButtonLabel": "Κοινή χρήση",
   "clearButtonTooltip": "Διαγραφή κειμένου",
-  "selectedDateLabel": "Επιλεγμένο"
+  "selectedDateLabel": "Επιλεγμένο",
+  "translateButtonLabel": "Translate"
 }
