--- a/packages/flutter_localizations/lib/src/l10n/material_en.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_en.arb
@@ -212,6 +212,11 @@
     "description": "The label for the Search Web button and menu items."
   },
 
+  "translateButtonLabel": "Translate",
+    "@translateButtonLabel": {
+      "description": "The label for the Translate button and menu items."
+  },
+
   "shareButtonLabel": "Share",
   "@shareButtonLabel": {
     "description": "The label for the Share button and menu items."
