--- a/packages/flutter_localizations/lib/src/l10n/material_et.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_et.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "Otsi veebist",
   "shareButtonLabel": "Jagamine",
   "clearButtonTooltip": "Kustutage tekst",
-  "selectedDateLabel": "Valitud"
+  "selectedDateLabel": "Valitud",
+  "translateButtonLabel": "Translate"
 }
