--- a/packages/flutter_localizations/lib/src/l10n/material_eu.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_eu.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "Bilatu sarean",
   "shareButtonLabel": "Partekatu",
   "clearButtonTooltip": "Garbitu testua",
-  "selectedDateLabel": "Hautatuta"
+  "selectedDateLabel": "Hautatuta",
+  "translateButtonLabel": "Translate"
 }
