--- a/packages/flutter_localizations/lib/src/l10n/material_fa.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_fa.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "جستجو در وب",
   "shareButtonLabel": "هم‌رسانی کردن",
   "clearButtonTooltip": "پاک کردن نوشتار",
-  "selectedDateLabel": "انتخاب‌شده"
+  "selectedDateLabel": "انتخاب‌شده",
+  "translateButtonLabel": "Translate"
 }
