--- a/packages/flutter_localizations/lib/src/l10n/material_fi.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_fi.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "Hae verkosta",
   "shareButtonLabel": "Jaa",
   "clearButtonTooltip": "Tyhjennä teksti",
-  "selectedDateLabel": "Valittu"
+  "selectedDateLabel": "Valittu",
+  "translateButtonLabel": "Translate"
 }
