--- a/packages/flutter_localizations/lib/src/l10n/material_fr.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_fr.arb
@@ -147,5 +147,6 @@
   "searchWebButtonLabel": "Rechercher sur le Web",
   "shareButtonLabel": "Partager",
   "clearButtonTooltip": "Effacer le texte",
-  "selectedDateLabel": "Sélectionnée"
+  "selectedDateLabel": "Sélectionnée",
+  "translateButtonLabel": "Translate"
 }
