--- a/packages/flutter_localizations/lib/src/l10n/material_ga.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_ga.arb
@@ -154,5 +154,6 @@
   "keyboardKeyScrollLock": "Scrollghlas",
   "keyboardKeySelect": "Roghnaigh",
   "keyboardKeyShift": "Shift",
-  "keyboardKeySpace": "Space"
+  "keyboardKeySpace": "Space",
+  "translateButtonLabel": "Translate"
 }
