--- a/packages/flutter_localizations/lib/src/l10n/material_gu.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_gu.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "વેબ પર શોધો",
   "shareButtonLabel": "શેર કરો",
   "clearButtonTooltip": "ટેક્સ્ટ સાફ કરો",
-  "selectedDateLabel": "પસંદ કરેલો"
+  "selectedDateLabel": "પસંદ કરેલો",
+  "translateButtonLabel": "Translate"
 }
