--- a/packages/flutter_localizations/lib/src/l10n/material_he.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_he.arb
@@ -152,5 +152,6 @@
   "searchWebButtonLabel": "חיפוש באינטרנט",
   "shareButtonLabel": "שיתוף",
   "clearButtonTooltip": "מחיקת הטקסט",
-  "selectedDateLabel": "התאריך שנבחר"
+  "selectedDateLabel": "התאריך שנבחר",
+  "translateButtonLabel": "Translate"
 }
