--- a/packages/flutter_localizations/lib/src/l10n/material_hi.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_hi.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "वेब पर खोजें",
   "shareButtonLabel": "शेयर करें",
   "clearButtonTooltip": "टेक्स्ट मिटाएं",
-  "selectedDateLabel": "चुनी गई"
+  "selectedDateLabel": "चुनी गई",
+  "translateButtonLabel": "Translate"
 }
