--- a/packages/flutter_localizations/lib/src/l10n/material_hr.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_hr.arb
@@ -149,5 +149,6 @@
   "searchWebButtonLabel": "Pretraži web",
   "shareButtonLabel": "Dijeli",
   "clearButtonTooltip": "Izbriši tekst",
-  "selectedDateLabel": "Odabrano"
+  "selectedDateLabel": "Odabrano",
+  "translateButtonLabel": "Translate"
 }
