--- a/packages/flutter_localizations/lib/src/l10n/material_hu.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_hu.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "Keresés az interneten",
   "shareButtonLabel": "Megosztás",
   "clearButtonTooltip": "Szöveg törlése",
-  "selectedDateLabel": "Kijelölve"
+  "selectedDateLabel": "Kijelölve",
+  "translateButtonLabel": "Translate"
 }
