--- a/packages/flutter_localizations/lib/src/l10n/material_hy.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_hy.arb
@@ -152,5 +152,6 @@
   "searchWebButtonLabel": "Որոնել համացանցում",
   "shareButtonLabel": "Կիսվել",
   "clearButtonTooltip": "Մաքրել տեքստը",
-  "selectedDateLabel": "Ընտրված է"
+  "selectedDateLabel": "Ընտրված է",
+  "translateButtonLabel": "Translate"
 }
