--- a/packages/flutter_localizations/lib/src/l10n/material_id.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_id.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "Telusuri di Web",
   "shareButtonLabel": "Bagikan",
   "clearButtonTooltip": "Hapus teks",
-  "selectedDateLabel": "Dipilih"
+  "selectedDateLabel": "Dipilih",
+  "translateButtonLabel": "Translate"
 }
