--- a/packages/flutter_localizations/lib/src/l10n/material_is.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_is.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "Leita á vefnum",
   "shareButtonLabel": "Deila",
   "clearButtonTooltip": "Hreinsa texta",
-  "selectedDateLabel": "Valið"
+  "selectedDateLabel": "Valið",
+  "translateButtonLabel": "Translate"
 }
