--- a/packages/flutter_localizations/lib/src/l10n/material_it.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_it.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "Cerca sul web",
   "shareButtonLabel": "Condividi",
   "clearButtonTooltip": "Cancella testo",
-  "selectedDateLabel": "Selezionata"
+  "selectedDateLabel": "Selezionata",
+  "translateButtonLabel": "Translate"
 }
