--- a/packages/flutter_localizations/lib/src/l10n/material_ja.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_ja.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "ウェブを検索",
   "shareButtonLabel": "共有",
   "clearButtonTooltip": "テキストを消去",
-  "selectedDateLabel": "選択済み"
+  "selectedDateLabel": "選択済み",
+  "translateButtonLabel": "Translate"
 }
