--- a/packages/flutter_localizations/lib/src/l10n/material_ka.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_ka.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "ვებში ძიება",
   "shareButtonLabel": "გაზიარება",
   "clearButtonTooltip": "ტექსტის გასუფთავება",
-  "selectedDateLabel": "არჩეულია"
+  "selectedDateLabel": "არჩეულია",
+  "translateButtonLabel": "Translate"
 }
