--- a/packages/flutter_localizations/lib/src/l10n/material_kk.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_kk.arb
@@ -148,5 +148,6 @@
   "searchWebButtonLabel": "Интернеттен іздеу",
   "shareButtonLabel": "Бөлісу",
   "clearButtonTooltip": "Мәтінді тазалау",
-  "selectedDateLabel": "Таңдалды."
+  "selectedDateLabel": "Таңдалды.",
+  "translateButtonLabel": "Translate"
 }
