--- a/packages/flutter_localizations/lib/src/l10n/material_km.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_km.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "ស្វែងរក​លើបណ្ដាញ",
   "shareButtonLabel": "ចែករំលែក",
   "clearButtonTooltip": "សម្អាតអក្សរ",
-  "selectedDateLabel": "បានជ្រើសរើស"
+  "selectedDateLabel": "បានជ្រើសរើស",
+  "translateButtonLabel": "Translate"
 }
