--- a/packages/flutter_localizations/lib/src/l10n/material_ky.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_ky.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "Интернеттен издөө",
   "shareButtonLabel": "Бөлүшүү",
   "clearButtonTooltip": "Текстти тазалоо",
-  "selectedDateLabel": "Тандалды"
+  "selectedDateLabel": "Тандалды",
+  "translateButtonLabel": "Translate"
 }
