--- a/packages/flutter_localizations/lib/src/l10n/material_lt.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_lt.arb
@@ -152,5 +152,6 @@
   "searchWebButtonLabel": "Ieškoti žiniatinklyje",
   "shareButtonLabel": "Bendrinti",
   "clearButtonTooltip": "Išvalyti tekstą",
-  "selectedDateLabel": "Pasirinkta"
+  "selectedDateLabel": "Pasirinkta",
+  "translateButtonLabel": "Translate"
 }
