--- a/packages/flutter_localizations/lib/src/l10n/material_mk.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_mk.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "Пребарајте на интернет",
   "shareButtonLabel": "Сподели",
   "clearButtonTooltip": "Избриши го текстот",
-  "selectedDateLabel": "Избрано"
+  "selectedDateLabel": "Избрано",
+  "translateButtonLabel": "Translate"
 }
