--- a/packages/flutter_localizations/lib/src/l10n/material_ms.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_ms.arb
@@ -147,5 +147,6 @@
   "searchWebButtonLabel": "Buat carian pada Web",
   "shareButtonLabel": "Kongsi",
   "clearButtonTooltip": "Kosongkan teks",
-  "selectedDateLabel": "Dipilih"
+  "selectedDateLabel": "Dipilih",
+  "translateButtonLabel": "Translate"
 }
