--- a/packages/flutter_localizations/lib/src/l10n/material_my.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_my.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "ဝဘ်တွင်ရှာရန်",
   "shareButtonLabel": "မျှဝေရန်",
   "clearButtonTooltip": "စာသား ဖယ်ရှားရန်",
-  "selectedDateLabel": "ရွေးထားသည်"
+  "selectedDateLabel": "ရွေးထားသည်",
+  "translateButtonLabel": "Translate"
 }
