--- a/packages/flutter_localizations/lib/src/l10n/material_ne.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_ne.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "वेबमा खोज्नुहोस्",
   "shareButtonLabel": "सेयर गर्नुहोस्",
   "clearButtonTooltip": "टेक्स्ट हटाउनुहोस्",
-  "selectedDateLabel": "चयन गरिएको"
+  "selectedDateLabel": "चयन गरिएको",
+  "translateButtonLabel": "Translate"
 }
