--- a/packages/flutter_localizations/lib/src/l10n/material_nl.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_nl.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "Op internet zoeken",
   "shareButtonLabel": "Delen",
   "clearButtonTooltip": "Tekst wissen",
-  "selectedDateLabel": "Geselecteerd"
+  "selectedDateLabel": "Geselecteerd",
+  "translateButtonLabel": "Translate"
 }
