--- a/packages/flutter_localizations/lib/src/l10n/material_pa.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_pa.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "ਵੈੱਬ 'ਤੇ ਖੋਜੋ",
   "shareButtonLabel": "ਸਾਂਝਾ ਕਰੋ",
   "clearButtonTooltip": "ਲਿਖਤ ਕਲੀਅਰ ਕਰੋ",
-  "selectedDateLabel": "ਚੁਣਿਆ ਗਿਆ"
+  "selectedDateLabel": "ਚੁਣਿਆ ਗਿਆ",
+  "translateButtonLabel": "Translate"
 }
