--- a/packages/flutter_localizations/lib/src/l10n/material_pl.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_pl.arb
@@ -152,5 +152,6 @@
   "searchWebButtonLabel": "Szukaj w internecie",
   "shareButtonLabel": "Udostępnij",
   "clearButtonTooltip": "Wyczyść tekst",
-  "selectedDateLabel": "Wybrano"
+  "selectedDateLabel": "Wybrano",
+  "translateButtonLabel": "Translate"
 }
