--- a/packages/flutter_localizations/lib/src/l10n/material_pt.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_pt.arb
@@ -148,5 +148,6 @@
   "searchWebButtonLabel": "Pesquisar na Web",
   "shareButtonLabel": "Compartilhar",
   "clearButtonTooltip": "Limpar texto",
-  "selectedDateLabel": "Selecionada"
+  "selectedDateLabel": "Selecionada",
+  "translateButtonLabel": "Translate"
 }
