--- a/packages/flutter_localizations/lib/src/l10n/material_ro.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_ro.arb
@@ -150,5 +150,6 @@
   "searchWebButtonLabel": "Căutați pe web",
   "shareButtonLabel": "Trimiteți",
   "clearButtonTooltip": "Ștergeți textul",
-  "selectedDateLabel": "Selectată"
+  "selectedDateLabel": "Selectată",
+  "translateButtonLabel": "Translate"
 }
