--- a/packages/flutter_localizations/lib/src/l10n/material_ru.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_ru.arb
@@ -153,5 +153,6 @@
   "searchWebButtonLabel": "Искать в интернете",
   "shareButtonLabel": "Поделиться",
   "clearButtonTooltip": "Удалить текст",
-  "selectedDateLabel": "Выбрано"
+  "selectedDateLabel": "Выбрано",
+  "translateButtonLabel": "Translate"
 }
