--- a/packages/flutter_localizations/lib/src/l10n/material_sk.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_sk.arb
@@ -152,5 +152,6 @@
   "searchWebButtonLabel": "Hľadať na webe",
   "shareButtonLabel": "Zdieľať",
   "clearButtonTooltip": "Vymazať text",
-  "selectedDateLabel": "Vybrané"
+  "selectedDateLabel": "Vybrané",
+  "translateButtonLabel": "Translate"
 }
