--- a/packages/flutter_localizations/lib/src/l10n/material_sl.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_sl.arb
@@ -152,5 +152,6 @@
   "searchWebButtonLabel": "Iskanje v spletu",
   "shareButtonLabel": "Deli",
   "clearButtonTooltip": "Počisti besedilo",
-  "selectedDateLabel": "Izbrano"
+  "selectedDateLabel": "Izbrano",
+  "translateButtonLabel": "Translate"
 }
