--- a/packages/flutter_localizations/lib/src/l10n/material_sr.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_sr.arb
@@ -149,5 +149,6 @@
   "searchWebButtonLabel": "Претражи веб",
   "shareButtonLabel": "Дели",
   "clearButtonTooltip": "Обриши текст",
-  "selectedDateLabel": "Изабрано"
+  "selectedDateLabel": "Изабрано",
+  "translateButtonLabel": "Translate"
 }
