--- a/packages/flutter_localizations/lib/src/l10n/material_sv.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_sv.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "Sök på webben",
   "shareButtonLabel": "Dela",
   "clearButtonTooltip": "Rensa text",
-  "selectedDateLabel": "Markerat"
+  "selectedDateLabel": "Markerat",
+  "translateButtonLabel": "Translate"
 }
