--- a/packages/flutter_localizations/lib/src/l10n/material_sw.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_sw.arb
@@ -148,5 +148,6 @@
   "searchWebButtonLabel": "Tafuta kwenye Wavuti",
   "shareButtonLabel": "Tuma",
   "clearButtonTooltip": "Futa maandishi",
-  "selectedDateLabel": "Umechagua"
+  "selectedDateLabel": "Umechagua",
+  "translateButtonLabel": "Translate"
 }
