--- a/packages/flutter_localizations/lib/src/l10n/material_th.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_th.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "ค้นหาบนอินเทอร์เน็ต",
   "shareButtonLabel": "แชร์",
   "clearButtonTooltip": "ล้างข้อความ",
-  "selectedDateLabel": "เลือกไว้"
+  "selectedDateLabel": "เลือกไว้",
+  "translateButtonLabel": "Translate"
 }
