--- a/packages/flutter_localizations/lib/src/l10n/material_tr.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_tr.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "Web'de Ara",
   "shareButtonLabel": "Paylaş",
   "clearButtonTooltip": "Metni temizle",
-  "selectedDateLabel": "Seçili"
+  "selectedDateLabel": "Seçili",
+  "translateButtonLabel": "Translate"
 }
