--- a/packages/flutter_localizations/lib/src/l10n/material_ug.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_ug.arb
@@ -145,5 +145,6 @@
   "keyboardKeyScrollLock": "Scroll Lock",
   "keyboardKeySelect": "تاللاش",
   "keyboardKeyShift": "Shift",
-  "keyboardKeySpace": "بوشلۇق"
+  "keyboardKeySpace": "بوشلۇق",
+  "translateButtonLabel": "Translate"
 }
