--- a/packages/flutter_localizations/lib/src/l10n/material_uk.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_uk.arb
@@ -152,5 +152,6 @@
   "searchWebButtonLabel": "Пошук в Інтернеті",
   "shareButtonLabel": "Поділитися",
   "clearButtonTooltip": "Видалити текст",
-  "selectedDateLabel": "Вибрано"
+  "selectedDateLabel": "Вибрано",
+  "translateButtonLabel": "Translate"
 }
