--- a/packages/flutter_localizations/lib/src/l10n/material_ur.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_ur.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "ویب تلاش کریں",
   "shareButtonLabel": "اشتراک کریں",
   "clearButtonTooltip": "ٹیکسٹ صاف کریں",
-  "selectedDateLabel": "منتخب کردہ"
+  "selectedDateLabel": "منتخب کردہ",
+  "translateButtonLabel": "Translate"
 }
