--- a/packages/flutter_localizations/lib/src/l10n/material_uz.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_uz.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "Internetdan qidirish",
   "shareButtonLabel": "Ulashish",
   "clearButtonTooltip": "Matnni tozalash",
-  "selectedDateLabel": "Tanlangan"
+  "selectedDateLabel": "Tanlangan",
+  "translateButtonLabel": "Translate"
 }
