--- a/packages/flutter_localizations/lib/src/l10n/material_vi.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_vi.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "Tìm kiếm trên web",
   "shareButtonLabel": "Chia sẻ",
   "clearButtonTooltip": "Xoá văn bản",
-  "selectedDateLabel": "Đã chọn"
+  "selectedDateLabel": "Đã chọn",
+  "translateButtonLabel": "Translate"
 }
