--- a/packages/flutter_localizations/lib/src/l10n/material_zh.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_zh.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "搜索",
   "shareButtonLabel": "分享",
   "clearButtonTooltip": "清除文字",
-  "selectedDateLabel": "已选择"
+  "selectedDateLabel": "已选择",
+  "translateButtonLabel": "Translate"
 }
