--- a/packages/flutter_localizations/lib/src/l10n/material_zu.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_zu.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "Sesha Iwebhu",
   "shareButtonLabel": "Yabelana",
   "clearButtonTooltip": "Sula umbhalo",
-  "selectedDateLabel": "Okukhethiwe"
+  "selectedDateLabel": "Okukhethiwe",
+  "translateButtonLabel": "Translate"
 }
