--- a/packages/flutter_localizations/lib/src/l10n/material_as.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_as.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "ৱেবত সন্ধান কৰক",
   "shareButtonLabel": "শ্বেয়াৰ কৰক",
   "clearButtonTooltip": "পাঠ মচক",
-  "selectedDateLabel": "বাছনি কৰা হৈছে"
+  "selectedDateLabel": "বাছনি কৰা হৈছে",
+  "translateButtonLabel": "Translate"
 }
