--- a/packages/flutter_localizations/lib/src/l10n/material_bg.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_bg.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "Търсене в мрежата",
   "shareButtonLabel": "Споделяне",
   "clearButtonTooltip": "Изчистване на текста",
-  "selectedDateLabel": "Избрано"
+  "selectedDateLabel": "Избрано",
+  "translateButtonLabel": "Translate"
 }
