--- a/packages/flutter_localizations/lib/src/l10n/material_de.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_de.arb
@@ -147,5 +147,6 @@
   "searchWebButtonLabel": "Im Web suchen",
   "shareButtonLabel": "Teilen",
   "clearButtonTooltip": "Text löschen",
-  "selectedDateLabel": "Ausgewählt"
+  "selectedDateLabel": "Ausgewählt",
+  "translateButtonLabel": "Translate"
 }
