--- a/packages/flutter_localizations/lib/src/l10n/material_gl.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_gl.arb
@@ -147,5 +147,6 @@
   "searchWebButtonLabel": "Buscar na Web",
   "shareButtonLabel": "Compartir",
   "clearButtonTooltip": "Borrar texto",
-  "selectedDateLabel": "Seleccionada"
+  "selectedDateLabel": "Seleccionada",
+  "translateButtonLabel": "Translate"
 }
