--- a/packages/flutter_localizations/lib/src/l10n/material_ko.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_ko.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "웹 검색",
   "shareButtonLabel": "공유",
   "clearButtonTooltip": "텍스트 삭제",
-  "selectedDateLabel": "선택됨"
+  "selectedDateLabel": "선택됨",
+  "translateButtonLabel": "Translate"
 }
