--- a/packages/flutter_localizations/lib/src/l10n/material_lo.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_lo.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "ຊອກຫາຢູ່ອິນເຕີເນັດ",
   "shareButtonLabel": "ແບ່ງປັນ",
   "clearButtonTooltip": "ລຶບລ້າງຂໍ້ຄວາມ",
-  "selectedDateLabel": "ເລືອກໄວ້"
+  "selectedDateLabel": "ເລືອກໄວ້",
+  "translateButtonLabel": "Translate"
 }
