--- a/packages/flutter_localizations/lib/src/l10n/material_lv.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_lv.arb
@@ -148,5 +148,6 @@
   "searchWebButtonLabel": "Meklēt tīmeklī",
   "shareButtonLabel": "Kopīgot",
   "clearButtonTooltip": "Notīrīt tekstu",
-  "selectedDateLabel": "Atlasīts"
+  "selectedDateLabel": "Atlasīts",
+  "translateButtonLabel": "Translate"
 }
