--- a/packages/flutter_localizations/lib/src/l10n/material_mn.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_mn.arb
@@ -148,5 +148,6 @@
   "searchWebButtonLabel": "Вебээс хайх",
   "shareButtonLabel": "Хуваалцах",
   "clearButtonTooltip": "Текстийг арилгах",
-  "selectedDateLabel": "Сонгосон"
+  "selectedDateLabel": "Сонгосон",
+  "translateButtonLabel": "Translate"
 }
