--- a/packages/flutter_localizations/lib/src/l10n/material_mr.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_mr.arb
@@ -148,5 +148,6 @@
   "searchWebButtonLabel": "वेबवर शोधा",
   "shareButtonLabel": "शेअर करा",
   "clearButtonTooltip": "मजकूर साफ करा",
-  "selectedDateLabel": "निवडली आहे"
+  "selectedDateLabel": "निवडली आहे",
+  "translateButtonLabel": "Translate"
 }
