--- a/packages/flutter_localizations/lib/src/l10n/material_no.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_no.arb
@@ -145,5 +145,6 @@
   "searchWebButtonLabel": "Søk på nettet",
   "shareButtonLabel": "Del",
   "clearButtonTooltip": "Slett teksten",
-  "selectedDateLabel": "Valgt"
+  "selectedDateLabel": "Valgt",
+  "translateButtonLabel": "Translate"
 }
