--- a/packages/flutter_localizations/lib/src/l10n/material_ps.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_ps.arb
@@ -148,5 +148,6 @@
   "searchWebButtonLabel": "Search Web",
   "shareButtonLabel": "Share...",
   "clearButtonTooltip": "Clear text",
-  "selectedDateLabel": "Selected"
+  "selectedDateLabel": "Selected",
+  "translateButtonLabel": "Translate"
 }
