--- a/packages/flutter_localizations/lib/src/l10n/material_si.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_si.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "වෙබය සොයන්න",
   "shareButtonLabel": "බෙදා ගන්න",
   "clearButtonTooltip": "පෙළ හිස් කරන්න",
-  "selectedDateLabel": "තෝරන ලදි"
+  "selectedDateLabel": "තෝරන ලදි",
+  "translateButtonLabel": "Translate"
 }
