--- a/packages/flutter_localizations/lib/src/l10n/material_sq.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_sq.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "Kërko në ueb",
   "shareButtonLabel": "Ndaj",
   "clearButtonTooltip": "Pastro tekstin",
-  "selectedDateLabel": "Zgjedhur"
+  "selectedDateLabel": "Zgjedhur",
+  "translateButtonLabel": "Translate"
 }
