--- a/packages/flutter_localizations/lib/src/l10n/material_te.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_te.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "వెబ్‌లో సెర్చ్ చేయండి",
   "shareButtonLabel": "షేర్ చేయండి",
   "clearButtonTooltip": "టెక్స్ట్‌ను క్లియర్ చేయండి",
-  "selectedDateLabel": "ఎంచుకోబడింది"
+  "selectedDateLabel": "ఎంచుకోబడింది",
+  "translateButtonLabel": "Translate"
 }
