--- a/packages/flutter_localizations/lib/src/l10n/material_tl.arb
+++ b/packages/flutter_localizations/lib/src/l10n/material_tl.arb
@@ -146,5 +146,6 @@
   "searchWebButtonLabel": "Maghanap sa Web",
   "shareButtonLabel": "I-share",
   "clearButtonTooltip": "I-clear ang text",
-  "selectedDateLabel": "Napili"
+  "selectedDateLabel": "Napili",
+  "translateButtonLabel": "Translate"
 }
